Fix alignment of content of li in dropdown

--- a/sass/blocks/_dropdown.sass
+++ b/sass/blocks/_dropdown.sass
@@ -67,11 +67,12 @@
         border-radius: 0 0 $button-border-radius $button-border-radius
 
   a
-    display: inline-block
     width: 100%
     font-weight: 700
     color: $white-color
     text-decoration: none
+    display: flex
+    align-items: center
 
   .is-open &
     display: block
